--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <div class="intro">
+      <p>
+        Репозиторий создан для обучения на профессиональном онлайн‑курсе «
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          HTML и CSS. Профессиональная вёрстка сайтов
+        </a>
+        ».
+      </p>
+    </div>
   </body>
 </html>
